--- a/hugo.toml
+++ b/hugo.toml
@@ -2,6 +2,11 @@ baseURL = 'https://example.org/'
 languageCode = 'en-us'
 title = "jieqi's archive"
 theme = 'hugo-bearblog'
+
+[markup]
+  [markup.highlight]
+    style = 'doom-one'
+
 [caches]
   [caches.images]
     dir = ':cacheDir/images'
